@@ -22,6 +22,7 @@ Data::Clone=0
 Data::Unixish::Apply=1.33
 ;!lint-prereqs assume-used # convenience
 Data::Unixish::ansi=0.02
+JSON=0
 Log::Any=0
 Module::List=0
 Moo=0
